--- a/RevenueCollection/model.yaml
+++ b/RevenueCollection/model.yaml
@@ -1,133 +1,108 @@
 RevenueCollection:
-
   description: A Data Model for city revenue collection operations.
-
   properties:
-
     address:
-
       description: The mailing address
-
       properties:
-
         addressCountry:
-          description: The country. For example, Spain
+          description: 'The country. For example, Spain'
           type: string
           x-ngsi:
             model: https://schema.org/addressCountry
             type: Property
-
         addressLocality:
-          description: The locality in which the street address is, and which is in the region
+          description: 'The locality in which the street address is, and which is in the region'
           type: string
           x-ngsi:
             model: https://schema.org/addressLocality
             type: Property
-
         addressRegion:
-          description: The region in which the locality is, and which is in the country
+          description: 'The region in which the locality is, and which is in the country'
           type: string
           x-ngsi:
             model: https://schema.org/addressRegion
             type: Property
-
         district:
-          description: A district is a type of administrative division that, in some countries, is managed by the local government
+          description: 'A district is a type of administrative division that, in some countries, is managed by the local government'
           type: string
           x-ngsi:
             type: Property
-
         postOfficeBoxNumber:
-          description: The post office box number for PO box addresses. For example, 03578
+          description: 'The post office box number for PO box addresses. For example, 03578'
           type: string
           x-ngsi:
             model: https://schema.org/postOfficeBoxNumber
             type: Property
-
         postalCode:
-          description: The postal code. For example, 24004
+          description: 'The postal code. For example, 24004'
           type: string
           x-ngsi:
             model: https://schema.org/https://schema.org/postalCode
             type: Property
-
         streetAddress:
           description: The street address
           type: string
           x-ngsi:
             model: https://schema.org/streetAddress
             type: Property
-
         streetNr:
           description: Number identifying a specific property on a public street
           type: string
           x-ngsi:
             type: Property
-
       type: object
-
       x-ngsi:
         model: https://schema.org/address
         type: Property
-
     alternateName:
       description: An alternative name for this item
       type: string
       x-ngsi:
         type: Property
-
     amountCollected:
       description: Amount collected towards the service corresponding to this observation
       type: number
       x-ngsi:
         type: Property
-
     areaServed:
       description: The geographic area where a service or offered item is provided
       type: string
       x-ngsi:
         model: https://schema.org/Text
         type: Property
-
     dataProvider:
       description: A sequence of characters identifying the provider of the harmonised data entity
       type: string
       x-ngsi:
         type: Property
-
     dateCreated:
       description: Entity creation timestamp. This will usually be allocated by the storage platform
       format: date-time
       type: string
       x-ngsi:
         type: Property
-
     dateModified:
       description: Timestamp of the last modification of the entity. This will usually be allocated by the storage platform
       format: date-time
       type: string
       x-ngsi:
         type: Property
-
     dateObserved:
       description: The date and time of this observation in ISO8601 UTC format
       format: date-time
       type: string
       x-ngsi:
         type: Property
-
     description:
       description: A description of this item
       type: string
       x-ngsi:
         type: Property
-
     enrollmentCertificateRecoveryAmount:
       description: Amount collected towards Enrollment Certificate from the establishment on annual basis
       type: number
       x-ngsi:
         type: Property
-
     id:
       anyOf:
         - description: Identifier format of any NGSI entity
@@ -145,13 +120,9 @@ RevenueCollection:
       description: Unique identifier of the entity
       x-ngsi:
         type: Property
-
     location:
-
-      description: Geojson reference to the item. It can be Point, LineString, Polygon, MultiPoint, MultiLineString or MultiPolygon
-
+      description: 'Geojson reference to the item. It can be Point, LineString, Polygon, MultiPoint, MultiLineString or MultiPolygon'
       oneOf:
-
         - description: Geojson reference to the item. Point
           properties:
             bbox:
@@ -175,7 +146,6 @@ RevenueCollection:
           type: object
           x-ngsi:
             type: GeoProperty
-
         - description: Geojson reference to the item. LineString
           properties:
             bbox:
@@ -202,7 +172,6 @@ RevenueCollection:
           type: object
           x-ngsi:
             type: GeoProperty
-
         - description: Geojson reference to the item. Polygon
           properties:
             bbox:
@@ -231,7 +200,6 @@ RevenueCollection:
           type: object
           x-ngsi:
             type: GeoProperty
-
         - description: Geojson reference to the item. MultiPoint
           properties:
             bbox:
@@ -257,7 +225,6 @@ RevenueCollection:
           type: object
           x-ngsi:
             type: GeoProperty
-
         - description: Geojson reference to the item. MultiLineString
           properties:
             bbox:
@@ -286,7 +253,6 @@ RevenueCollection:
           type: object
           x-ngsi:
             type: GeoProperty
-
         - description: Geojson reference to the item. MultiLineString
           properties:
             bbox:
@@ -317,16 +283,13 @@ RevenueCollection:
           type: object
           x-ngsi:
             type: GeoProperty
-
       x-ngsi:
         type: GeoProperty
-
     month:
-      description: Month corresponding to this observation and is described in MM format, for eg. '05' for the month of May
+      description: 'Month corresponding to this observation and is described in MM format, for eg. ''05'' for the month of May'
       type: string
       x-ngsi:
         type: Property
-
     municipalityInfo:
       description: Municipality information corresponding to this observation
       properties:
@@ -347,13 +310,11 @@ RevenueCollection:
       type: object
       x-ngsi:
         type: Property
-
     name:
       description: The name of this item
       type: string
       x-ngsi:
         type: Property
-
     owner:
       description: A List containing a JSON encoded sequence of characters referencing the unique Ids of the owner(s)
       items:
@@ -376,19 +337,16 @@ RevenueCollection:
       type: array
       x-ngsi:
         type: Property
-
     registrationCertificateRecoveryAmount:
       description: Amount collected towards Registration Certificate on monthly basis from the establishment per employee
       type: number
       x-ngsi:
         type: Property
-
     revenueCollectionType:
-      description: Type of source from which the city administration collects the revenue, could be property tax, vehicle registration, party hall booking, community hall booking, auditorium booking etc
+      description: 'Type of source from which the city administration collects the revenue, could be property tax, vehicle registration, party hall booking, community hall booking, auditorium booking etc'
       type: string
       x-ngsi:
         type: Property
-
     seeAlso:
       description: list of uri pointing to additional resources about the item
       oneOf:
@@ -401,19 +359,16 @@ RevenueCollection:
           type: string
       x-ngsi:
         type: Property
-
     source:
-      description: A sequence of characters giving the original source of the entity data as a URL. Recommended to be the fully qualified domain name of the source provider, or the URL to the source object
+      description: 'A sequence of characters giving the original source of the entity data as a URL. Recommended to be the fully qualified domain name of the source provider, or the URL to the source object'
       type: string
       x-ngsi:
         type: Property
-
     totalCount:
       description: Count of the revenue collection service corresponding to this observation
       type: number
       x-ngsi:
         type: Property
-
     type:
       description: NGSI Entity type. It has to be RevenueCollection
       enum:
@@ -421,134 +376,73 @@ RevenueCollection:
       type: string
       x-ngsi:
         type: Property
-
     vehicleType:
-
-      description: Type of vehicle from the point of view of its structural characteristics. This is different than the vehicle category . The following values defined by _VehicleTypeEnum_ and _VehicleTypeEnum2_, [DATEX 2 version 2.3](http://d2docs.ndwcloud.nu/_static/umlmodel/v2.3/index.htm)
-
+      description: 'Type of vehicle from the point of view of its structural characteristics. This is different than the vehicle category . The following values defined by _VehicleTypeEnum_ and _VehicleTypeEnum2_, [DATEX 2 version 2.3](http://d2docs.ndwcloud.nu/_static/umlmodel/v2.3/index.htm)'
       enum:
-
         - agriculturalVehicle
-
         - anyVehicle
-
         - articulatedVehicle
-
         - autorickshaw
-
         - bicycle
-
         - binTrolley
-
         - BRT mini bus·
-
         - BRT bus
-
         - bus
-
         - car
-
         - caravan
-
         - carOrLightVehicle
-
         - carWithCaravan
-
         - carWithTrailer
-
         - cleaningTrolley
-
         - compactor
-
         - constructionOrMaintenanceVehicle
-
         - dumper
-
         - e-moped
-
         - e-scooter
-
         - e-motorcycle
-
         - fourWheelDrive
-
         - highSidedVehicle
-
         - hopper
-
         - lorry
-
         - minibus
-
         - moped
-
         - motorcycle
-
         - motorcycleWithSideCar
-
         - motorscooter
-
         - sweepingMachine
-
         - tanker
-
         - tempo
-
         - threeWheeledVehicle
-
         - tipper
-
         - trailer
-
         - tram
-
         - trolley
-
         - twoWheeledVehicle
-
         - van
-
         - vehicleWithoutCatalyticConverter
-
         - vehicleWithCaravan
-
         - vehicleWithTrailer
-
         - withEvenNumberedRegistrationPlates
-
         - withOddNumberedRegistrationPlates
-
         - other
-
       type: string
-
       x-ngsi:
         type: Property
-
     vehicleTypeCode:
-      description: The code for vehicleType corresponding to this observation. For eg.- '1' - MOPED/SCOOTER, '2' - MOTOR CYCLE, '4' - PRIVATE MOTOR CAR/JEEP CAR, '21' - TEMPO, '26' - BUS, etc
+      description: 'The code for vehicleType corresponding to this observation. For eg.- ''1'' - MOPED/SCOOTER, ''2'' - MOTOR CYCLE, ''4'' - PRIVATE MOTOR CAR/JEEP CAR, ''21'' - TEMPO, ''26'' - BUS, etc'
       type: string
       x-ngsi:
         type: Property
-
     year:
-      description: Year corresponding to this observation and is described in YYYY format, for eg. '2020'
+      description: 'Year corresponding to this observation and is described in YYYY format, for eg. ''2020'''
       type: string
       x-ngsi:
         type: Property
-
   required: []
-
   type: object
-
-  x-derived-from: ''
-
-  x-disclaimer: Redistribution and use in source and binary forms, with or without modification, are permitted  provided that the license conditions are met. Copyleft (c) 2022 Contributors to Smart Data Models Program
-
+  x-derived-from: ""
+  x-disclaimer: 'Redistribution and use in source and binary forms, with or without modification, are permitted  provided that the license conditions are met. Copyleft (c) 2022 Contributors to Smart Data Models Program'
   x-license-url: https://github.com/smart-data-models/dataModel.PublicAccountability/blob/master/RevenueCollection/LICENSE.md
-
   x-model-schema: https://smart-data-models.github.io/dataModel.PublicAccountability/RevenueCollection/schema.json
-
   x-model-tags: IUDX
-
   x-version: 0.0.1
